--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "session-gen",
   "version": "1.0.0",
-  "description": "",
+  "description": "Silent Wolf Session Generator",
+  "type": "module",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "keywords": [],
+  "keywords": [
+    "whatsapp",
+    "baileys",
+    "session-generator",
+    "silent-wolf"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
